<resources>
    <string name="app_name">ZoneOut</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    // Profile Settings

    <string name="account_preferences">Account Preferences</string>
    <string name="access_security">Access and Security</string>
    <string name="visibility_preferences">Visibility Preferences</string>
    <string name="luminosity_preferences">Luminosity Preferences</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="title_add">Add</string>
    <string name="title_recommended">Recommended</string>
    <string name="title_profile">Profile</string>
    <string name="title_departure">My Trips</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="postDesc">Brasil (localmente /bɾaˈziw/[b]), oficialmente República Federativa do Brasil (Loudspeaker.svg? escutar),[9] é o maior país da América do Sul e da região da América Latina, sendo o quinto maior do mundo em área territorial (equivalente a 47,3% do território sul-americano)[2] e sexto em população[10][11] (com mais de 210 milhões de habitantes). É o único país na América onde se fala majoritariamente a língua portuguesa e o maior país lusófono do planeta,[12] além de ser uma das nações mais multiculturais e etnicamente diversas, em decorrência da forte imigração oriunda de variados locais do mundo. Sua atual Constituição, promulgada em 1988, concebe o Brasil como uma república federativa presidencialista,[9] formada pela união dos 26 estados, do Distrito Federal e dos 5 570 municípios.[9][13][nota 1]  Banhado pelo Oceano Atlântico, o Brasil tem um litoral de 7 491 km[12] e faz fronteira com todos os outros países sul-americanos, exceto Chile e Equador, sendo limitado a norte pela Venezuela, Guiana, Suriname e pelo departamento ultramarino francês da Guiana Francesa; a noroeste pela Colômbia; a oeste pela Bolívia e Peru; a sudoeste pela Argentina e Paraguai e ao sul pelo Uruguai. Vários arquipélagos formam parte do território brasileiro, como o Atol das Rocas, o Arquipélago de São Pedro e São Paulo, Fernando de Noronha (o único destes habitado por civis) e Trindade e Martim Vaz.[12] O Brasil também é o lar de uma diversidade de animais selvagens, ecossistemas e de vastos recursos naturais em uma grande variedade de habitats protegidos.[12]  O território que atualmente forma o Brasil foi oficialmente descoberto pelos portugueses em 22 de abril de 1500, em expedição liderada por Pedro Álvares Cabral. Segundo alguns historiadores como Antonio de Herrera e Pietro d\'Anghiera, o encontro do território teria sido três meses antes, em 26 de janeiro, pelo navegador espanhol Vicente Yáñez Pinzón, durante uma expedição sob seu comando. A região, então habitada por indígenas ameríndios divididos entre milhares de grupos étnicos e linguísticos diferentes, cabia a Portugal pelo Tratado de Tordesilhas, e tornou-se uma colônia do Império Português.[15] O vínculo colonial foi rompido, de fato, quando em 1808 a capital do reino foi transferida de Lisboa para a cidade do Rio de Janeiro, depois de tropas francesas comandadas por Napoleão Bonaparte invadirem o território português.[16] Em 1815, o Brasil se torna parte de um reino unido com Portugal. Dom Pedro I, o primeiro imperador, proclamou a independência política do país em 1822. Inicialmente independente como um império, período no qual foi uma monarquia constitucional parlamentarista, o Brasil tornou-se uma república em 1889, em razão de um golpe militar chefiado pelo marechal Deodoro da Fonseca (o primeiro presidente), embora uma legislatura bicameral, agora chamada de Congresso Nacional, já existisse desde a ratificação da primeira Constituição, em 1824.[16] Desde o início do período republicano, a governança democrática foi interrompida por longos períodos de regimes autoritários, até um governo civil e eleito democraticamente assumir o poder em 1985, com o fim da ditadura militar.[17]  O PIB nominal brasileiro é o décimo segundo maior do mundo, e o oitavo por paridade do poder de compra (PPC).[5] O país é um dos principais celeiros do planeta, sendo o maior produtor de café dos últimos 150 anos.[18] É classificado como uma economia de renda média-alta pelo Banco Mundial[19] e um país recentemente industrializado, que detém a maior parcela de riqueza global da América Latina. Como potência regional e média,[20] a nação tem reconhecimento e influência internacional, sendo que também é classificada como uma potência global emergente[21] e como uma potencial superpotência por vários analistas.[22] É membro fundador da Organização das Nações Unidas (ONU), G20, BRICS, Comunidade dos Países de Língua Portuguesa (CPLP), União Latina, Organização dos Estados Americanos (OEA), Organização dos Estados Ibero-americanos (OEI), Mercado Comum do Sul (Mercosul) e da União de Nações Sul-Americanas (Unasul).</string>
</resources>
